--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,9 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "LassoGEE"]
+	path = LassoGEE
+	url = https://github.com/liygcr/lassogee
+	shallow = true
+	subdir = LassoGEE
+	registered = true
